# jml

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
jml/: __init__.py  __main__.py  app.py  utils.py
tests/: test_cli.py
