[project]
name = "jml"
version = "0.1.0"
description = "JSON <-> YAML converter CLI"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "hatch>=1.16.2",
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[project.scripts]
jml = "jml:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyproject.toml"
source = "git"

